--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ tornado==6.2
 traitlets==5.9.0
 uri-template==1.2.0
 urllib3==1.26.14
+vaderSentiment==3.3.2
 wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
